test/files/neg/t6355.check
t6355.scala:12: error: implementation restriction: applyDynamic cannot be overloaded
  def applyDynamic(name: String)(x: Int): Int = 2
      ^
one error found
